# Indra

./: CMakeLists.txt  README.md  TODO.md  lottes_notes.txt  vcpkg.json
kernels/: pointcloud_kernel.cu
shaders/: basicQuadVert.glsl  pointcloud.frag.glsl  pointcloud.vert.glsl  postprocess_blur.frag  postprocess_brightnessThreshold.frag  postprocess_comp.frag  raymarch.comp  raymarch_depth_base.comp  raymarch_depth_refine.comp  raymarch_lottes.comp  raymarch_simple.comp  reconstruction.comp  reconstruction_test.comp  render_depth.comp  shade_from_depth.comp
shaders/include/: camera.glsl  distance.glsl  old_distance.glsl  palette.glsl
src/: Camera.cpp  Camera.gui.cpp  Camera.h  FirstPersonController.cpp  FirstPersonController.h  ICameraController.h  Interaction.cpp  Interaction.h  Renderer.cpp  Renderer.gui.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderParameter.cpp  ShaderParameter.h  ShaderState.cpp  ShaderState.h  TrackballController.cpp  TrackballController.h  main.cpp
src/app/: App.cpp  App.h  Screen.h
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.cu  AudioAnalyzer.h  AudioCapture.cpp  AudioCapture.h
src/core/: bbox3d.h  color.h  core.h  matrix4.h  mesh.h  quaternion.h  transform.h  vec2.h  vec2i.h  vec3.h
src/render/: ComputeShader.cpp  ComputeShader.h  CudaKernel.cpp  CudaKernel.h  Framebuffer.cpp  Framebuffer.h  GraphicsShader.cpp  GraphicsShader.h  LineRenderer.cpp  LineRenderer.h  MeshRenderer.cpp  MeshRenderer.h  PointCloudKernel.cu  PointCloudKernel.cuh  PointCloudRenderer.cpp  PointCloudRenderer.h  PointCloudRenderer_fft.cpp  PostProcessor.cpp  PostProcessor.h  Raymarcher.cpp  Raymarcher.h  RaymarcherLottes.cpp  RaymarcherLottes.h  RaymarcherSimple.cpp  RaymarcherSimple.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TextureBlit.cpp  TextureBlit.h
src/screens/: MainScreen.cpp  MainScreen.gui.cpp  MainScreen.h
src/shader/: ComputeShader.cpp  ComputeShader.h  GraphicsShader.cpp  GraphicsShader.h  Shader.cpp  Shader.h
src/util/: FileWatcher.cpp  FileWatcher.h  Serialization.cpp  Serialization.h
tests/: test_matrix4.cpp
